Use java 17 on lib